Single Responsibility is Real, the insertTuple is now Working